--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -1,9 +1,59 @@
-body {
-  display: flex;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+::-webkit-scrollbar {
+  width: 1px !important;
+  height: 1px !important;
+  overflow-y: auto !important;
+}
+::-webkit-scrollbar-track {
+  background: #fff !important;
+}
+::-webkit-scrollbar-thumb {
+  background: #928f8f !important;
+}
+:root {
+  --primary_color: #efefef;
+  --secondary_dark: #0a0a0a;
+  --secondary_grey: #969696;
+  --secondary_light: #faf9f6;
+}
+* {
+  box-sizing: border-box;
   margin: 0;
+}
+ul,
+ol {
   padding: 0;
-  font-family: Arial, sans-serif;
-  align-items: center;
-  justify-content: center;
-  background-color: #eeeeee;
+}
+li {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
+html {
+  color-scheme: dark;
+}
+body {
+  font-family: 'Inter', sans-serif;
+  background: var(--primary_color);
+  color: black;
+}
+
+.container {
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding-inline: 80px;
+  @media (max-width: 1200px) {
+    padding-inline: 60px;
+  }
+  @media (max-width: 1000px) {
+    padding-inline: 40px;
+  }
+  @media (max-width: 768px) {
+    padding-inline: 30px;
+  }
+  @media (max-width: 500px) {
+    padding-inline: 16px;
+  }
 }
