--- a/src/components/intro.tsx/index.module.scss
+++ b/src/components/intro.tsx/index.module.scss
@@ -4,61 +4,80 @@
   align-items: center;
   max-width: 1440px;
   width: 100%;
-  height: 1045px;
-  padding: 0 20px 0 20px;
-  div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    p {
-      max-width: 833px;
-      width: 100%;
-      margin: 0;
-      font-weight: 600;
-      font-size: 72px;
-      letter-spacing: -4%;
-      text-align: center;
-      padding-top: 184px;
-      color: #0a0a0a;
-    }
-    h3 {
-      width: 598px;
-      font-size: 20px;
-      margin-top: 33px;
-      font-weight: 600;
-      line-height: 24px;
-      letter-spacing: -0.02em;
-      text-align: center;
-      color: #969696;
-    }
+  height: 945px;
+  position: relative;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  .mainTitle {
+    position: absolute;
+    top: 180px;
+    max-width: 833px;
+    width: 100%;
+    font-weight: 600;
+    font-size: 72px;
+    letter-spacing: -4%;
+    text-align: center;
+    color: var(--secondary_dark);
+  }
+
+  .subTitle {
+    position: absolute;
+    top: 350px;
+    max-width: 600px;
+    width: 100%;
+    font-size: 20px;
+    margin-top: 33px;
+    font-weight: 600;
+    line-height: 24px;
+    letter-spacing: -0.02em;
+    text-align: center;
+    color: var(--secondary_grey);
   }
 }
 
+.btn {
+  position: absolute;
+  top: 500px;
+  background-color: var(--secondary_dark);
+}
+
 div.inTrust {
+  position: absolute;
+  bottom: 0;
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: space-between;
   max-width: 1280px;
-  padding: 0 70px 0 70px;
   width: 100%;
   height: 178px;
-  background-color: black;
+  background-color: var(--secondary_dark);
   border-radius: 40px;
-  margin-top: 274px;
-  h5 {
+  .text {
     width: 146px;
-    color: white;
+    color: var(--secondary_light);
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 400;
     line-height: 24.2px;
     text-align: left;
+    margin-left: 70px;
   }
 }
 
 .companies {
   display: flex;
+  margin: 0 70px 0 70px;
   align-items: center;
+  justify-content: space-between;
   width: 100%;
-  color: white;
+  color: var(--secondary_light);
+  .company {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin: 0 20px 0 20px;
+  }
 }
