--- a/src/layouts/header/index.module.scss
+++ b/src/layouts/header/index.module.scss
@@ -4,10 +4,31 @@
   justify-content: space-between;
   width: 100%;
   height: 80px;
-  padding: 0 80px 0 80px;
+  padding: 0 80px;
 }
 
-.links {
+.navLinks {
   display: flex;
-  flex-direction: row;
+  align-items: center;
+  gap: 40px;
+  .link {
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 20px;
+    color: var(--secondary_dark);
+  }
+}
+
+.authBlock {
+  display: flex;
+  align-items: center;
+  gap: 48px;
+  .signUpLink {
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 24px;
+    color: var(--secondary_dark);
+  }
 }
