--- a/src/layouts/header/index.module.scss
+++ b/src/layouts/header/index.module.scss
@@ -5,6 +5,15 @@
   width: 100%;
   height: 80px;
   padding: 0 80px;
+  @media (max-width: 1200px) {
+    padding: 0 40px;
+  }
+  @media (max-width: 1000px) {
+    padding: 0 26px;
+  }
+  @media (max-width: 500px) {
+    padding: 0 16px;
+  }
 }
 
 .navLinks {
@@ -18,6 +27,12 @@
     line-height: 20px;
     color: var(--secondary_dark);
   }
+  @media (max-width: 1000px) {
+    gap: 25px;
+  }
+  @media (max-width: 850px) {
+    display: none;
+  }
 }
 
 .authBlock {
@@ -27,6 +42,76 @@
   .signUpLink {
     font-family: Inter;
     font-size: 20px;
+    font-weight: 600;
+    line-height: 24px;
+    color: var(--secondary_dark);
+  }
+  @media (max-width: 1000px) {
+    gap: 30px;
+  }
+  @media (max-width: 850px) {
+    display: none;
+  }
+}
+
+.burger {
+  display: none;
+  @media (max-width: 850px) {
+    display: flex;
+    // align-items: center;
+    // justify-content: flex-end;
+    // height: 40px;
+    // width: 40px;
+    cursor: pointer;
+  }
+}
+
+.dropDownMenu {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  left: 0;
+  right: 0;
+  top: 80px;
+  z-index: 20;
+  width: 100%;
+  height: 0;
+  overflow: hidden;
+  background-color: white;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  transition: height 0.4s ease-in-out;
+  @media (max-width: 850px) {
+    &.open {
+      height: 244px;
+    }
+  }
+}
+
+.menuNavLinks {
+  display: flex;
+  align-items: center;
+  gap: 60px;
+  margin-top: 40px;
+  .link {
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 20px;
+    color: var(--secondary_dark);
+  }
+}
+
+.menuAuthBlock {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 56px;
+  gap: 30px;
+  .signUpLink {
+    font-family: Inter;
+    font-size: 21px;
     font-weight: 600;
     line-height: 24px;
     color: var(--secondary_dark);
