--- a/src/layouts/header/index.module.scss
+++ b/src/layouts/header/index.module.scss
@@ -58,10 +58,6 @@
   display: none;
   @media (max-width: 850px) {
     display: flex;
-    // align-items: center;
-    // justify-content: flex-end;
-    // height: 40px;
-    // width: 40px;
     cursor: pointer;
   }
 }
@@ -82,7 +78,7 @@
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
   transition: height 0.4s ease-in-out;
-  @media (max-width: 850px) {
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);  @media (max-width: 850px) {
     &.open {
       height: 244px;
     }
