--- a/src/components/intro.tsx/index.module.scss
+++ b/src/components/intro.tsx/index.module.scss
@@ -14,11 +14,11 @@
   align-items: center;
   .mainTitle {
     position: absolute;
-    top: 180px;
+    top: 190px;
     max-width: 833px;
     width: 100%;
     font-weight: 600;
-    font-size: 72px;
+    font-size: 62px;
     letter-spacing: -4%;
     text-align: center;
     color: var(--secondary_dark);
@@ -26,12 +26,11 @@
 
   .subTitle {
     position: absolute;
-    top: 350px;
+    top: 395px;
     max-width: 600px;
     width: 100%;
     font-size: 20px;
-    margin-top: 33px;
-    font-weight: 600;
+    font-weight: 500;
     line-height: 24px;
     letter-spacing: -0.02em;
     text-align: center;
@@ -45,7 +44,7 @@
   background-color: var(--secondary_dark);
 }
 
-div.inTrust {
+.inTrust {
   position: absolute;
   bottom: 0;
   display: flex;
@@ -56,6 +55,11 @@ div.inTrust {
   height: 178px;
   background-color: var(--secondary_dark);
   border-radius: 40px;
+  @media (max-width: 1200px) {
+    flex-direction: column;
+    height: 146px;
+    padding: 10px 20px;
+  }
   .text {
     width: 146px;
     color: var(--secondary_light);
@@ -64,20 +68,79 @@ div.inTrust {
     line-height: 24.2px;
     text-align: left;
     margin-left: 70px;
+    @media (max-width: 1200px) {
+      width: fit-content;
+      font-weight: 600;
+      text-align: center;
+      margin: 10px 0;
+    }
   }
 }
 
 .companies {
   display: flex;
-  margin: 0 70px 0 70px;
+  margin-inline: 70px;
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  height: 75px;
+  overflow: hidden;
+  justify-content: space-evenly;
+  overflow-x: scroll;
+  scrollbar-width: thin;
   color: var(--secondary_light);
+  min-width: unset;
+  border-radius: 35px;
+  -webkit-overflow-scrolling: touch;
+  @media (max-width: 1200px) {
+    margin-inline: 0;
+  }
   .company {
+    max-width: 150px;
+    flex-shrink: 0;
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    margin: 0 20px 0 20px;
+    margin-inline: 10px;
+    span {
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+    }
   }
+}
+
+.imageFirst {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-380px, -425px);
+}
+
+.imageSecond {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(380px, -360px);
+}
+
+.imageThird {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-570px, -250px);
+}
+
+.imageFourth {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(268px, -60px);
+}
+
+.imageFifth {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-410px, 20px);
 }
