--- a/src/layouts/header/index.module.scss
+++ b/src/layouts/header/index.module.scss
@@ -5,6 +5,7 @@
   width: 100%;
   height: 80px;
   padding: 0 80px;
+  background-color: var(--primary_color);
   @media (max-width: 1200px) {
     padding: 0 40px;
   }
