--- a/src/components/intro.tsx/index.module.scss
+++ b/src/components/intro.tsx/index.module.scss
@@ -6,6 +6,8 @@
   width: 100%;
   height: 945px;
   position: relative;
+  overflow: hidden;
+  margin: 0 auto;
 }
 
 .content {
@@ -51,7 +53,7 @@
   align-items: center;
   justify-content: space-between;
   max-width: 1280px;
-  width: 100%;
+  width: auto;
   height: 178px;
   background-color: var(--secondary_dark);
   border-radius: 40px;
@@ -121,21 +123,21 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(380px, -360px);
+  transform: translate(370px, -360px);
 }
 
 .imageThird {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-570px, -250px);
+  transform: translate(-573px, -250px);
 }
 
 .imageFourth {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(268px, -60px);
+  transform: translate(256px, -60px);
 }
 
 .imageFifth {
