--- a/src/layouts/header/index.module.scss
+++ b/src/layouts/header/index.module.scss
@@ -22,9 +22,8 @@
   align-items: center;
   gap: 40px;
   .link {
-    font-family: Inter;
     font-size: 16px;
-    font-weight: 500;
+    font-weight: 400;
     line-height: 20px;
     color: var(--secondary_dark);
   }
@@ -41,10 +40,10 @@
   align-items: center;
   gap: 48px;
   .signUpLink {
-    font-family: Inter;
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 500;
     line-height: 24px;
+    letter-spacing: -0.3px;
     color: var(--secondary_dark);
   }
   @media (max-width: 1000px) {
@@ -92,7 +91,6 @@
   gap: 60px;
   margin-top: 40px;
   .link {
-    font-family: Inter;
     font-size: 20px;
     font-weight: 500;
     line-height: 20px;
@@ -107,7 +105,6 @@
   margin-top: 56px;
   gap: 30px;
   .signUpLink {
-    font-family: Inter;
     font-size: 21px;
     font-weight: 600;
     line-height: 24px;
