--- a/src/layouts/header/index.module.scss
+++ b/src/layouts/header/index.module.scss
@@ -94,6 +94,7 @@
     font-size: 20px;
     font-weight: 500;
     line-height: 20px;
+    letter-spacing: -0.5px;
     color: var(--secondary_dark);
   }
 }
@@ -105,9 +106,10 @@
   margin-top: 56px;
   gap: 30px;
   .signUpLink {
-    font-size: 21px;
+    font-size: 20px;
     font-weight: 600;
     line-height: 24px;
+    letter-spacing: -0.8px;
     color: var(--secondary_dark);
   }
 }
