--- a/src/layouts/header/index.module.scss
+++ b/src/layouts/header/index.module.scss
@@ -78,7 +78,8 @@
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
   transition: height 0.4s ease-in-out;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);  @media (max-width: 850px) {
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  @media (max-width: 850px) {
     &.open {
       height: 244px;
     }
