--- a/src/layouts/footer/index.module.scss
+++ b/src/layouts/footer/index.module.scss
@@ -74,10 +74,9 @@
   justify-content: space-between;
   width: 55%;
   @media (max-width: 900px) {
-    justify-content: center;
-    gap: 85px;
+    justify-content: space-evenly;
     margin-block: 24px;
-    width: auto;
+    width: 100%;
   }
   @media (max-width: 700px) {
     gap: 65px;
