--- a/src/components/ourGoals/index.module.scss
+++ b/src/components/ourGoals/index.module.scss
@@ -9,8 +9,32 @@
     line-height: 80px;
     letter-spacing: -0.04em;
     color: var(--secondary_grey);
+    
   }
 
   .description {
+    .theItem {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .wrapper {
+      width: 60px;
+      height: 60px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 20px;
+      background-color: var(--secondary_light);
+    }
+    .wrapper:first-child {
+      background-color: var(--secondary_dark);
+    }
+  }
+  .title {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 24px;
+    letter-spacing: -0.02em;
   }
 }
