--- a/src/components/ourGoals/index.module.scss
+++ b/src/components/ourGoals/index.module.scss
@@ -1,23 +1,42 @@
 .content {
   width: 100%;
-  height: 500px;
-  background-color: rgb(160, 227, 210);
 
-  p {
+  .headTitle {
     font-size: 52px;
     font-weight: 600;
     line-height: 80px;
     letter-spacing: -0.04em;
     color: var(--secondary_grey);
-    
+    margin-bottom: 40px;
+    @media (max-width: 1000px) {
+      font-family: Inter;
+      font-size: 42px;
+      line-height: 38.73px;
+    }
+    @media (max-width: 700px) {
+      font-size: 32px;
+      margin-bottom: 24px;
+    }
   }
 
   .description {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 20px;
+    @media (max-width: 700px) {
+      grid-template-columns: 1fr 1fr;
+      gap: 0;
+    }
+
     .theItem {
       display: flex;
       flex-direction: column;
       align-items: center;
+      @media (max-width: 700px) {
+        margin-inline: 5.5%;
+      }
     }
+
     .wrapper {
       width: 60px;
       height: 60px;
@@ -26,15 +45,28 @@
       justify-content: center;
       border-radius: 20px;
       background-color: var(--secondary_light);
+      margin-bottom: 20px;
     }
-    .wrapper:first-child {
+
+    .bgrndDark {
       background-color: var(--secondary_dark);
     }
   }
+
   .title {
     font-size: 20px;
     font-weight: 600;
     line-height: 24px;
     letter-spacing: -0.02em;
+    text-align: center;
+    margin-bottom: 40px;
+    color: var(--secondary_grey);
+    @media (max-width: 1000px) {
+      font-size: 18px;
+      line-height: 19.36px;
+    }
+    @media (max-width: 900px) {
+      font-size: 16px;
+    }
   }
 }
