--- a/src/components/ourGoals/index.module.scss
+++ b/src/components/ourGoals/index.module.scss
@@ -22,7 +22,10 @@
   .description {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 20px;
+    gap: 30px;
+    @media (max-width: 1030px) {
+      gap: 20px;
+    }
     @media (max-width: 700px) {
       grid-template-columns: 1fr 1fr;
       gap: 0;
