--- a/src/components/howDoesItWorks/index.module.scss
+++ b/src/components/howDoesItWorks/index.module.scss
@@ -3,8 +3,18 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 950px;
-  background-color: rgb(158, 254, 254);
+  height: 1050px;
+  padding-top: 96px;
+  // background-color: rgb(61, 125, 131);
+  @media (max-width: 1000px) {
+    padding-top: 76px;
+  }
+  @media (max-width: 700px) {
+    padding-top: 50px;
+  }
+  @media (max-width: 500px) {
+    padding-top: 30px;
+  }
 
   .mainText {
     h1 {
@@ -14,6 +24,19 @@
       text-align: center;
       color: var(--secondary_dark);
       margin-bottom: 24px;
+      @media (max-width: 1000px) {
+        font-size: 46px;
+        line-height: 38.73px;
+      }
+      @media (max-width: 700px) {
+        font-size: 40px;
+      }
+      @media (max-width: 500px) {
+        font-size: 32px;
+      }
+      @media (max-width: 350px) {
+        font-size: 30px;
+      }
     }
     h3 {
       width: 480px;
@@ -23,6 +46,18 @@
       letter-spacing: -0.02em;
       text-align: center;
       color: var(--secondary_grey);
+      @media (max-width: 1000px) {
+        font-size: 18px;
+        line-height: 19.36px;
+      }
+      @media (max-width: 700px) {
+        font-size: 16px;
+        width: 400px;
+      }
+      @media (max-width: 450px) {
+        font-size: 16px;
+        width: 100%;
+      }
     }
   }
 
@@ -31,13 +66,25 @@
     max-width: 1007px;
     width: 100%;
     height: 100%;
-    background-color: rgb(156, 156, 155);
     margin-top: 80px;
     .steps {
       width: 100%;
       height: 100%;
       position: absolute;
       overflow: hidden;
+      p {
+        margin-inline: 30px;
+        font-size: 20px;
+        font-weight: 600;
+        line-height: 24px;
+        letter-spacing: -0.02em;
+        text-align: center;
+        color: var(--secondary_dark);
+        @media (max-width: 370px) {
+          margin-inline: 10px;
+          font-size: 18px;
+        }
+      }
 
       .stepOne {
         position: absolute;
@@ -51,12 +98,11 @@
         border-radius: 30px;
         background-color: var(--secondary_dark);
         z-index: 10;
+        @media (max-width: 370px) {
+          width: 250px;
+          height: 128px;
+        }
         p {
-          font-size: 20px;
-          font-weight: 600;
-          line-height: 24px;
-          letter-spacing: -0.02em;
-          text-align: center;
           color: var(--secondary_light);
         }
       }
@@ -73,13 +119,9 @@
         height: 128px;
         border-radius: 30px;
         background-color: var(--secondary_light);
-        p {
-          font-size: 20px;
-          font-weight: 600;
-          line-height: 24px;
-          letter-spacing: -0.02em;
-          text-align: center;
-          color: var(--secondary_dark);
+        @media (max-width: 370px) {
+          width: 250px;
+          height: 128px;
         }
       }
 
@@ -95,14 +137,6 @@
         height: 128px;
         border-radius: 30px;
         background-color: var(--secondary_light);
-        p {
-          font-size: 20px;
-          font-weight: 600;
-          line-height: 24px;
-          letter-spacing: -0.02em;
-          text-align: center;
-          color: var(--secondary_dark);
-        }
       }
 
       .stepFour {
@@ -117,14 +151,6 @@
         height: 128px;
         border-radius: 30px;
         background-color: var(--secondary_light);
-        p {
-          font-size: 20px;
-          font-weight: 600;
-          line-height: 24px;
-          letter-spacing: -0.02em;
-          text-align: center;
-          color: var(--secondary_dark);
-        }
       }
     }
 
@@ -136,6 +162,9 @@
         background-color: var(--secondary_light);
         margin-inline: 170px;
         height: 3px;
+        @media (max-width: 370px) {
+          margin-inline: 140px;
+        }
       }
     }
 
@@ -147,17 +176,23 @@
         background-color: var(--secondary_light);
         margin-inline: 170px;
         height: 3px;
+        @media (max-width: 370px) {
+          margin-inline: 140px;
+        }
       }
     }
 
     .lineWrapThree {
       position: absolute;
-      top: 314.5px;
+      top: 482.5px;
       width: 100%;
       .line {
         background-color: var(--secondary_light);
         margin-inline: 170px;
         height: 3px;
+        @media (max-width: 370px) {
+          margin-inline: 140px;
+        }
       }
     }
 
@@ -165,18 +200,49 @@
       position: absolute;
       top: 119.5px;
       left: 143px;
+      @media (max-width: 370px) {
+        left: 123px;
+      }
     }
-
     .vectorTopRight {
       position: absolute;
       top: -27.5px;
       left: 120px;
+      @media (max-width: 370px) {
+        left: 96px;
+      }
     }
-
     .vectorBottomRight {
       position: absolute;
       top: 119.5px;
       left: 120px;
+      @media (max-width: 370px) {
+        left: 96px;
+      }
+    }
+    .vectorTopLeft {
+      position: absolute;
+      top: -27.5px;
+      left: 143px;
+      @media (max-width: 370px) {
+        left: 123px;
+      }
+    }
+    .vectorBottomLeftTwo {
+      position: absolute;
+      top: 119.5px;
+      left: 143px;
+      @media (max-width: 370px) {
+        left: 123px;
+      }
+    }
+    .vectorTopRightTwo {
+      position: absolute;
+      top: -27.5px;
+      left: 120px;
+      @media (max-width: 370px) {
+        left: 143px;
+      }
     }
   }
 }
