--- a/src/components/contact-us/index.module.scss
+++ b/src/components/contact-us/index.module.scss
@@ -7,11 +7,14 @@
   border-radius: 40px;
   pointer-events: none;
   position: relative;
+  margin-block: 100px;
   @media (max-width: 800px) {
     height: 408px;
+    margin-block: 80px;
   }
   @media (max-width: 550px) {
     justify-content: flex-start;
+    margin-block: 60px;
   }
 
   .backgroundImg {
@@ -34,6 +37,50 @@
     }
     @media (max-width: 440px) {
       left: -105px;
+    }
+  }
+
+  .contactUs {
+    display: flex;
+    flex-direction: column;
+    top: 116px;
+    width: 476px;
+    align-items: center;
+    justify-content: flex-start;
+    position: absolute;
+
+    h1 {
+      font-size: 52px;
+      font-weight: 600;
+      line-height: 62.93px;
+      text-align: center;
+      margin-bottom: 24px;
+      @media (max-width: 1000px) {
+        font-size: 46px;
+        line-height: 38.73px;
+      }
+      @media (max-width: 700px) {
+        font-size: 40px;
+      }
+      @media (max-width: 500px) {
+        font-size: 32px;
+      }
+    }
+    h3 {
+      font-size: 20px;
+      font-weight: 600;
+      line-height: 24px;
+      letter-spacing: -0.02em;
+      text-align: center;
+      color: var(--secondary_grey);
+    }
+    button {
+      width: 248px;
+      height: 56px;
+      margin-top: 40px;
+      border-radius: 16px;
+      background-color: var(--secondary_dark);
+      border: 0;
     }
   }
 }
