--- a/src/components/contact-us/index.module.scss
+++ b/src/components/contact-us/index.module.scss
@@ -3,6 +3,17 @@
   align-items: center;
   justify-content: center;
   position: relative;
+  padding-top: 130px;
+  @media (max-width: 1000px) {
+    padding-top: 96px;
+  }
+  @media (max-width: 700px) {
+    padding-top: 60px;
+  }
+  @media (max-width: 500px) {
+    padding-top: 40px;
+  }
+  
   .contactUs {
     display: flex;
     flex-direction: column;
@@ -69,14 +80,11 @@
     border-radius: 40px;
     pointer-events: none;
     position: relative;
-    margin-block: 100px;
     @media (max-width: 800px) {
       height: 408px;
-      margin-block: 80px;
     }
     @media (max-width: 550px) {
       justify-content: flex-start;
-      margin-block: 60px;
     }
 
     .backgroundImg {
