leave request block in process

--- a/src/components/how-does-it-works/index.module.scss
+++ b/src/components/how-does-it-works/index.module.scss
@@ -112,6 +112,7 @@
         @media (max-width: 700px) {
           width: 250px;
           height: 108px;
+          border-radius: 25px;
         }
 
         p {
@@ -135,6 +136,7 @@
           width: 250px;
           height: 108px;
           top: 148px;
+          border-radius: 25px;
         }
       }
 
@@ -154,6 +156,7 @@
           width: 250px;
           height: 108px;
           top: 296px;
+          border-radius: 25px;
         }
       }
 
@@ -173,6 +176,7 @@
           width: 250px;
           height: 108px;
           top: 444px;
+          border-radius: 25px;
         }
       }
     }
