--- a/src/components/intro.tsx/index.module.scss
+++ b/src/components/intro.tsx/index.module.scss
@@ -150,6 +150,9 @@
       height: 146px;
       padding: 10px 20px;
     }
+    @media (max-width: 700px) {
+      border-radius: 30px;
+    }
 
     .text {
       width: 146px;
@@ -166,6 +169,9 @@
         margin: 10px 0;
       }
       @media (max-width: 450px) {
+        font-size: 19px;
+      }
+      @media (max-width: 400px) {
         font-size: 16px;
       }
     }
