--- a/src/components/leave-request/index.module.scss
+++ b/src/components/leave-request/index.module.scss
@@ -1,6 +1,6 @@
 .content {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
   max-width: 1080;
   width: 100%;
@@ -11,22 +11,30 @@
     display: flex;
     flex-direction: column;
     width: 476px;
+    background-color: yellowgreen;
 
     h1 {
       font-size: 52px;
       font-weight: 600;
       line-height: 62.93px;
+      margin-bottom: 24px;
+      @media (max-width: 1000px) {
+        font-size: 46px;
+        line-height: 38.73px;
+      }
+      @media (max-width: 700px) {
+        font-size: 42px;
+      }
+      @media (max-width: 500px) {
+        font-size: 32px;
+      }
     }
     h3 {
       font-size: 20px;
       font-weight: 600;
       line-height: 24px;
       letter-spacing: -0.02em;
+      color: var(--secondary_grey);
     }
-  }
-
-  .sendRequest {
-    display: flex;
-    width: 375px;
   }
 }
