--- a/src/components/reviews/index.module.scss
+++ b/src/components/reviews/index.module.scss
@@ -3,20 +3,20 @@
   font-weight: 600;
   line-height: 62.93px;
   text-align: center;
+  margin-block: 40px;
 }
-
 
 .sliderContainer {
   position: relative;
   width: 100%;
-  max-width: 1200px;
   margin: 0 auto;
   overflow: hidden;
 
-  .sliderWrapper {
-    overflow: hidden;
-    width: 100%;
-  }
+  // .sliderWrapper {
+  //   overflow: hidden;
+  //   width: 100%;
+  //   background-color: green;
+  // }
 
   .slides {
     display: flex;
@@ -24,23 +24,70 @@
   }
 
   .slide {
-    min-width: 100%;
+    max-width: 100%;
+    min-width: 99%;
+    height: 210px;
     flex-shrink: 0;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #f5f5f5;
-    height: 300px;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    font-size: 24px;
-    color: #333;
-  }
+    justify-content: space-around;
 
+    .reviewWrap {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      max-width: 320px;
+      width: 100%;
+
+      .reviewGrade {
+        display: flex;
+        gap: 25px;
+        margin-bottom: 20px;
+      }
+
+      .reviewFeedback {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        color: #282828;
+        height: 120px;
+        flex-shrink: 0;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 5;
+        line-clamp: 5;
+        -webkit-box-orient: vertical;
+      }
+
+      .factory {
+        font-size: 20px;
+        font-weight: 600;
+        line-height: 16.8px;
+        margin-top: 24px;
+      }
+    }
+  }
 }
 
 .btnWrap {
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 35px;
+  margin-top: 45px;
+
+  button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    margin: 0;
+    &:focus {
+      outline: 2px solid var(--secondary_dark);
+      border-radius: 4px;
+    }
+  }
 }
