--- a/src/components/intro.tsx/index.module.scss
+++ b/src/components/intro.tsx/index.module.scss
@@ -45,16 +45,20 @@
     position: relative;
     top: 230px;
     width: 750px;
+    font-size: 72px;
     font-weight: 600;
-    font-size: 68px;
-    letter-spacing: -1px;
+    line-height: 80px;
+    letter-spacing: -0.04em;
     text-align: center;
     color: var(--secondary_dark);
     @media (max-width: 1100px) {
+      font-size: 68px;
+      line-height: 72px;
       top: 300px;
     }
     @media (max-width: 900px) {
       font-size: 58px;
+      line-height: 58px;
       width: 520px;
     }
     @media (max-width: 700px) {
@@ -62,11 +66,13 @@
     }
     @media (max-width: 450px) {
       font-size: 40px;
+      line-height: 44px;
       width: 100%;
       top: 240px;
     }
     @media (max-width: 390px) {
       font-size: 35px;
+      line-height: 39px;
       width: 320px;
     }
   }
@@ -76,7 +82,7 @@
     top: 255px;
     width: 600px;
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 500;
     line-height: 24px;
     letter-spacing: -0.02em;
     text-align: center;
