minor changes in intro block

--- a/src/components/our-goals/index.module.scss
+++ b/src/components/our-goals/index.module.scss
@@ -8,6 +8,7 @@
     letter-spacing: -0.04em;
     color: var(--secondary_grey);
     margin-bottom: 40px;
+    margin-top: 20px;
     @media (max-width: 1000px) {
       font-size: 46px;
       line-height: 38.73px;
