--- a/src/components/about-project/index.module.scss
+++ b/src/components/about-project/index.module.scss
@@ -11,13 +11,13 @@
     height: 850px;
   }
   @media (max-width: 1000px) {
-    height: 730px;
+    height: 680px;
   }
-  @media (max-width: 600px) {
+  @media (max-width: 650px) {
     height: 720px;
   }
-  @media (max-width: 500px) {
-    height: 750px;
+  @media (max-width: 600px) {
+    height: 680px;
   }
 
   .turned {
@@ -106,6 +106,7 @@
       @media (max-width: 500px) {
         font-size: 16px;
         margin-top: 18px;
+        line-height: 19.36px;
       }
     }
   }
