--- a/src/components/about-project/index.module.scss
+++ b/src/components/about-project/index.module.scss
@@ -19,6 +19,15 @@
   @media (max-width: 600px) {
     height: 680px;
   }
+  @media (max-width: 500px) {
+    height: 660px;
+  }
+  @media (max-width: 440px) {
+    height: 700px;
+  }
+  @media (max-width: 400px) {
+    height: 685px;
+  }
 
   .turned {
     position: absolute;
