--- a/src/components/leave-request/index.module.scss
+++ b/src/components/leave-request/index.module.scss
@@ -5,13 +5,44 @@
   max-width: 1080;
   width: 100%;
   margin: 0 auto;
-  padding-top: 260px;
+  padding: 260px 0 70px;
+  @media (max-width: 1000px) {
+    padding: 170px 0 40px;
+  }
+  @media (max-width: 900px) {
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 50px;
+    padding: 150px 0 70px;
+  }
+  @media (max-width: 700px) {
+    padding: 100px 0 30px;
+    gap: 30px;
+  }
+  @media (max-width: 500px) {
+    padding: 60px 0 30px;
+    gap: 24px;
+  }
 
   .description {
     display: flex;
     flex-direction: column;
     width: 476px;
-    background-color: yellowgreen;
+    @media (max-width: 1000px) {
+      width: 400px;
+    }
+    @media (max-width: 900px) {
+      width: 470px;
+      text-align: center;
+    }
+    @media (max-width: 500px) {
+      width: 370px;
+      text-align: left;
+    }
+    @media (max-width: 400px) {
+      width: 100%;
+    }
 
     h1 {
       font-size: 52px;
@@ -20,10 +51,11 @@
       margin-bottom: 24px;
       @media (max-width: 1000px) {
         font-size: 46px;
-        line-height: 38.73px;
+        line-height: 52px;
       }
       @media (max-width: 700px) {
         font-size: 42px;
+        line-height: 38.73px;
       }
       @media (max-width: 500px) {
         font-size: 32px;
@@ -31,10 +63,13 @@
     }
     h3 {
       font-size: 20px;
-      font-weight: 600;
+      font-weight: 500;
       line-height: 24px;
       letter-spacing: -0.02em;
       color: var(--secondary_grey);
+      @media (max-width: 900px) {
+        font-size: 19px;
+      }
     }
   }
 }
