--- a/src/components/send-request/index.module.scss
+++ b/src/components/send-request/index.module.scss
@@ -2,34 +2,133 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  width: 375px;
-  // background-color: orange;
+  max-width: 375px;
+  width: 100%;
+  font-family: Inter;
 
   .fullName {
-    width: 375px;
+    width: 100%;
     height: 52px;
     border-radius: 8px;
-    font-size: 20px;
     border: 1px solid #cfd3d4;
     background-color: transparent;
     padding-inline: 16px;
     outline: none;
+    font-family: inherit;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19.36px;
     color: var(--secondary_dark);
     &::placeholder {
       font-size: 16px;
-      font-weight: 400;
+      font-weight: 300;
       line-height: 19.36px;
-      color: #ABAFB1;
+      color: #abafb1;
     }
   }
 
   .phoneNumberWrap {
+    width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    margin-top: 16px;
+    gap: 6px;
 
-    .numCode {
+    .code {
+      display: flex;
+      align-items: center;
+      flex-shrink: 0;
+      width: 134px;
+      height: 52px;
+      padding-right: 16px;
+      border-radius: 8px;
+      border: 1px solid #cfd3d4;
 
+      .phoneNumberCode {
+        width: 100%;
+        height: 100%;
+        background-color: transparent;
+        padding-inline: 16px;
+        outline: none;
+        border: none;
+        font-family: inherit;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 19.36px;
+        color: var(--secondary_dark);
+      }
     }
+
+    .phoneNumber {
+      width: 100%;
+      height: 52px;
+      border-radius: 8px;
+      border: 1px solid #cfd3d4;
+      background-color: transparent;
+      padding-inline: 16px;
+      outline: none;
+      font-family: inherit;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 19.36px;
+      color: var(--secondary_dark);
+      &::placeholder {
+        font-size: 16px;
+        font-weight: 300;
+        line-height: 19.36px;
+        color: #abafb1;
+      }
+    }
+    .inputError {
+      border: 1px solid red;
+      background-color: rgba(255, 0, 0, 0.1);
+      color: red;
+      font-weight: 300;
+    }
+  }
+
+  .description {
+    width: 100%;
+    height: 163px;
+    resize: none;
+    background-color: transparent;
+    margin-top: 16px;
+    padding: 16px;
+    border-radius: 8px;
+    border: 1px solid #cfd3d4;
+    outline: none;
+    font-family: inherit;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19.36px;
+    color: var(--secondary_dark);
+    &::placeholder {
+      font-size: 16px;
+      font-weight: 300;
+      line-height: 19.36px;
+      color: #abafb1;
+    }
+  }
+
+  .btn {
+    width: 100%;
+    height: 56px;
+    margin-top: 24px;
+    border: none;
+    border-radius: 16px;
+    background-color: var(--secondary_dark);
+    outline: none;
+    font-family: inherit;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: -0.02em;
+  }
+
+  .inputError {
+    border: 1px solid red;
+    background-color: rgba(255, 0, 0, 0.1);
+    color: red;
+    font-weight: 300;
   }
 }
