--- a/src/components/leave-request/index.module.scss
+++ b/src/components/leave-request/index.module.scss
@@ -18,7 +18,7 @@
   }
   @media (max-width: 700px) {
     padding: 100px 0 30px;
-    gap: 30px;
+    gap: 40px;
   }
   @media (max-width: 500px) {
     padding: 60px 0 30px;
@@ -63,12 +63,17 @@
     }
     h3 {
       font-size: 20px;
-      font-weight: 500;
+      font-weight: 600;
       line-height: 24px;
       letter-spacing: -0.02em;
       color: var(--secondary_grey);
       @media (max-width: 900px) {
         font-size: 19px;
+        line-height: 22px;
+      }
+      @media (max-width: 500px) {
+        font-size: 16px;
+        line-height: 19px;
       }
     }
   }
