--- a/src/layouts/footer/index.module.scss
+++ b/src/layouts/footer/index.module.scss
@@ -146,6 +146,10 @@
       gap: 10px;
       display: flex;
       align-items: center;
+      font-size: 15px;
+      font-weight: 500;
+      line-height: 24px;
+      letter-spacing: -0.02em;
       color: var(--secondary_dark);
     }
   }
@@ -188,6 +192,7 @@
     font-size: 16px;
     font-weight: 600;
     line-height: 24px;
+    letter-spacing: -0.03em;
   }
 }
 
@@ -195,6 +200,9 @@
   display: none;
   @media (max-width: 900px) {
     display: block;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
     color: var(--secondary_grey);
   }
 }
