--- a/src/layouts/header/index.module.scss
+++ b/src/layouts/header/index.module.scss
@@ -23,8 +23,9 @@
   gap: 40px;
   .link {
     font-size: 16px;
-    font-weight: 400;
+    font-weight: 500;
     line-height: 20px;
+    letter-spacing: -0.01em;
     color: var(--secondary_dark);
   }
   @media (max-width: 1000px) {
@@ -41,7 +42,7 @@
   gap: 48px;
   .signUpLink {
     font-size: 20px;
-    font-weight: 500;
+    font-weight: 600;
     line-height: 24px;
     letter-spacing: -0.3px;
     color: var(--secondary_dark);
