--- a/src/components/intro.tsx/index.module.scss
+++ b/src/components/intro.tsx/index.module.scss
@@ -15,10 +15,10 @@
     height: 1100px;
   }
   @media (max-width: 700px) {
-    height: 1060px;
+    height: 1040px;
   }
   @media (max-width: 450px) {
-    height: 920px;
+    height: 900px;
   }
 }
 
@@ -63,12 +63,13 @@
     }
     @media (max-width: 700px) {
       font-size: 48px;
+      top: 280px;
     }
     @media (max-width: 450px) {
       font-size: 42px;
       line-height: 44px;
       width: 100%;
-      top: 240px;
+      top: 220px;
     }
     @media (max-width: 395px) {
       font-size: 35px;
@@ -96,10 +97,11 @@
     }
     @media (max-width: 700px) {
       width: 450px;
+      top: 305px;
     }
     @media (max-width: 450px) {
       width: 310px;
-      top: 260px;
+      top: 240px;
     }
   }
 
@@ -114,10 +116,10 @@
       top: 380px;
     }
     @media (max-width: 700px) {
-      top: 360px;
+      top: 340px;
     }
     @media (max-width: 450px) {
-      top: 300px;
+      top: 280px;
     }
   }
 }
@@ -223,6 +225,9 @@
   pointer-events: none;
   @media (max-width: 1100px) {
     top: 490px;
+  }
+  @media (max-width: 700px) {
+    top: 470px;
   }
 
   .imageFirst {
