--- a/src/components/factories/index.module.scss
+++ b/src/components/factories/index.module.scss
@@ -5,6 +5,7 @@
   color: var(--secondary_light);
   margin-top: 10px;
   font-family: Inter;
+  pointer-events: none;
 
   .title {
     width: 100%;
