--- a/src/components/how-does-it-works/index.module.scss
+++ b/src/components/how-does-it-works/index.module.scss
@@ -5,6 +5,7 @@
   width: 100%;
   height: 1050px;
   padding-top: 96px;
+  pointer-events: none;
   @media (max-width: 1000px) {
     padding-top: 76px;
     height: 980px;
