--- a/src/components/intro.tsx/index.module.scss
+++ b/src/components/intro.tsx/index.module.scss
@@ -51,6 +51,7 @@
     letter-spacing: -0.04em;
     text-align: center;
     color: var(--secondary_dark);
+    pointer-events: none;
     @media (max-width: 1100px) {
       font-size: 68px;
       line-height: 72px;
@@ -88,6 +89,7 @@
     letter-spacing: -0.02em;
     text-align: center;
     color: var(--secondary_grey);
+    pointer-events: none;
     @media (max-width: 1100px) {
       font-size: 18px;
       top: 325px;
@@ -170,6 +172,7 @@
       line-height: 24.2px;
       text-align: left;
       margin-left: 70px;
+      pointer-events: none;
       @media (max-width: 1200px) {
         width: fit-content;
         font-weight: 600;
