--- a/src/components/leave-request/index.module.scss
+++ b/src/components/leave-request/index.module.scss
@@ -29,6 +29,7 @@
     display: flex;
     flex-direction: column;
     width: 476px;
+    pointer-events: none;
     @media (max-width: 1000px) {
       width: 400px;
     }
